--- a/css/drawingpage.scss
+++ b/css/drawingpage.scss
@@ -1,9 +1,12 @@
 body.drawingpage {
   width: 100%;
+  height: 100vw;
   background: white; 
 }
 
 .drawingpage-background {
+  width:100%;
+  height:100vw;
   position:absolute;
   z-index:-1;
 }
@@ -55,4 +58,32 @@ button.btn{
 .drawingpage__color {
   padding-top: 3%;
   box-sizing: border-box;
+}
+
+.drawingpage__finisharea {
+  width:100%;
+  height: 90px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.drawingpage__finisharea__click {
+  width:70%;
+  height: 40px;
+  border-radius: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: rgba(116, 14, 14, 0.308);
+}
+
+.drawingpage__finisharea__click__finish {
+  width:70%;
+  height: 40px;
+  text-decoration: none;
+  color: black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
