--- a/css/drawingpage.css
+++ b/css/drawingpage.css
@@ -1,13 +1,13 @@
 @charset "UTF-8";
 body.drawingpage {
-  width: 100%;
+  width: 100vw;
   height: 100vw;
   background: white;
 }
 
-.drawingpage-background {
+.drawingpage-background img {
   width: 100%;
-  height: 100vw;
+  height: 100%;
   position: absolute;
   z-index: -1;
 }
@@ -36,16 +36,16 @@ button.btn {
 
 .drawingpage__board {
   width: 100%;
-  height: 330px;
+  height: 380px;
   box-sizing: border-box;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.drawingpage__board__draw-area {
+*#drawingpage__board__draw-area {
   width: 94%;
-  height: 300px;
+  height: 350px;
   background: white;
 }
 
