--- a/css/drawingpage.scss
+++ b/css/drawingpage.scss
@@ -42,9 +42,9 @@ button.btn{
   align-items: center;
 }
 
-*#drawingpage__board__draw-area {
-  width: 94%;
-  height: 350px;
+.drawingpage__board__draw-area {
+  //width: 94%;
+  //height: 350px;
   background: white;
 }
 
