--- a/css/drawingpage.css
+++ b/css/drawingpage.css
@@ -43,9 +43,7 @@ button.btn {
   align-items: center;
 }
 
-*#drawingpage__board__draw-area {
-  width: 94%;
-  height: 350px;
+.drawingpage__board__draw-area {
   background: white;
 }
 
