--- a/css/startpage.css
+++ b/css/startpage.css
@@ -1,7 +1,9 @@
+@charset "UTF-8";
 body.startpage {
   background: white;
   margin: 0px;
   height: 100vw;
+  font-family: 'メイリオ', 'Meiryo' , sans-serif;
 }
 
 .startpage-background {
@@ -18,6 +20,7 @@ body.startpage {
   height: 90%;
   width: 100%;
   font-size: 30px;
+  color: #fff;
   display: flex;
   justify-content: center;
   align-items: center;
