--- a/css/drawingpage.scss
+++ b/css/drawingpage.scss
@@ -15,6 +15,7 @@ body.drawingpage {
   width: 100%;
   height: 80px;
   font-size: 25px;
+  color: rgb(73, 73, 73);
   display:flex;
   justify-content: center;
   align-items: center;
